--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img{
         max-width: 46.66666666666667em;
     }
     .main-header, .second-header{
-        font-size: 3rem;
+        font-size: 2.2rem;
     }
     .introductory-section p{
         font-size: 1.4rem;
@@ -133,14 +133,18 @@ img{
         column-gap: 1em;
     }
     .card{
-        width: 400px;
-        height: 250px;
+        width: 26.66666666666667em;
+        height: 16.66666666666667em;
+        padding: 2em;
     }
     .supervisor{
         align-self: center;
     }
     .calculator{
         align-self: center;
+    }
+    img{
+        margin-top: 4em;
     }
 }
 /* End Media Queries */
